# twikit_review

./: .env.example  docker-compose.yml  insert_person_by_csv.py  login_playwright.py  main.py  main_multithread.py  pyproject.toml
db/: account_manager.py  db_manager.py  init_db.py  manage_accounts.py
s3/: person_to_s3.py  utils.py
